--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["JinGuo Liu"]
 version = "0.1.0"
 
 [deps]
+EliminateGraphs = "b3ff564c-d3b6-11e9-0ef2-9b4ae9f9cbe1"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 
 [compat]
