--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "405e750c-c8cf-11e9-3887-a572dd575b1a"
 authors = ["JinGuo Liu"]
 version = "0.1.0"
 
+[deps]
+BitBasis = "50ba71b6-fa0f-514d-ae9a-0916efc90dcf"
+OMEinsum = "ebe7aa44-baf0-506c-a96f-8464559b3922"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+
 [compat]
 julia = "1"
 
